# project-juggler

./: .gitignore  README.md  design.md  engineering_core.md  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
docs/: cass-provider-watch.md
docs/plans/: fs-store-design.md  pj-project-juggler.md  pj-sandbox-agent-access.md
pj/: annotate.py  cache.py  cass_facade.py  census.py  census_process.py  census_server.py  cli.py  discover.py  envelope.py  fs_store.py  paths.py  pretty.py  project_sessions.py  resume.py  runtime_ports.py  schedule.py  search.py  session_store.py  state.py  web_hints.py
pj/parsers/: __init__.py  base.py  claude_code.py  codex.py  kimi.py
scripts/: cass-check-progress.py  cass-refresh.sh  cass-reindex.sh  cass-setup-mac.sh  separate-project-juggler-host.sh  smoke-test.sh
tests/: test_census.py  test_pj.py  test_runtime_ports.py  test_web_hints.py
