[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-juggler"
version = "0.2.1"
description = "CLI for reviewing, searching, and resuming local AI coding agent sessions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kevin Lim" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pj = "pj.cli:main"

[tool.setuptools]
packages = ["pj", "pj.parsers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
